@@ -1,6 +1,5 @@
 #!/bin/sh
 # $Id$
-
 # texconfig-sys: Thomas Esser, public domain.
 
 # wrapper script for texconfig with TEXMFVAR and TEXMFCONFIG set to
@@ -16,10 +15,13 @@ test -f /bin/bsh && test -z "$RUNNING_BSH" \
   && { RUNNING_BSH=true; export RUNNING_BSH; exec /bin/bsh $0 ${1+"$@"}; }
 unset RUNNING_BSH
 
-export PATH
-
 # hack around a bug in zsh:
 test -n "${ZSH_VERSION+set}" && alias -g '${1+"$@"}'='"$@"'
+
+# preferentially use subprograms from our own directory.
+mydir=`echo "$0" | sed 's,/[^/]*$,,'`
+mydir=`cd "$mydir" && pwd`
+PATH="$mydir:$PATH"; export PATH
 
 v=`kpsewhich -var-value TEXMFSYSVAR`
 c=`kpsewhich -var-value TEXMFSYSCONFIG`
